# BridgeAi-test

./: README.md
python/examples/cdp-langchain-chatbot-telegram/: README.md
python/examples/cdp-langchain-chatbot-whatsapp/: .gitignore  README.md  character.json  chatbot.py  coingecko_plugin.py  format_key.py  knowledge.md  pyproject.toml  test_cdp.py  test_openai.py  test_whatsapp.py  webhook.py  whatsapp_bot.py
